--- a/app/assets/javascripts/templates/actions.handlebars
+++ b/app/assets/javascripts/templates/actions.handlebars
@@ -1,9 +1,18 @@
 <h2>Recent SherwinActions</h2>
 
-<ul>
-<li>item 1 </li>
-<li>item 2 </li>
-<li>item 3 </li>
-  </ul>
+<div class="span12">
+    {{#each action in arrangedContent}}
+  <div class="action well">
+    start time: {{ action.start_time }} <br>
+    start time: {{ action.start_time_pretty }} <br>
+    end time: {{ action.end_time }} <br>
+
+    {{action.s}}
+    <br> helllo 
+  </div>
+    {{/each}}
+</div>
+
 <p>Your content here.</p>
+
 
