add action_view and refactor actions_view to use new view; add dateFormat and dateFromNow helpers to simple_helpers.js for handlebars, use #with to establish new context in actions.hbs; use get(key) instead of just key in registeredHelper for handlebars; displays start time and humanized (time ago)

--- a/app/assets/javascripts/templates/actions.handlebars
+++ b/app/assets/javascripts/templates/actions.handlebars
@@ -1,15 +1,14 @@
 <h2>Recent SherwinActions</h2>
 
 <div class="span12">
-    {{#each action in arrangedContent}}
-  <div class="action well">
-    start time: {{ action.start_time }} <br>
-    start time: {{ action.start_time_pretty }} <br>
-    end time: {{ action.end_time }} <br>
 
-    {{action.s}}
-    <br> helllo 
-  </div>
+    {{#each action in arrangedContent}}
+      {{#with action}}
+        inside with
+        {{description}}
+        {{debug description}}
+      {{view  Sysys.ActionView contentBinding="action"}}
+      {{/with}}
     {{/each}}
 </div>
 
