various code cleaning up: remove debug statements, rename 'contacts' route to 'actions', pretty format action.hbs start_time

--- a/app/assets/javascripts/templates/action.hbs
+++ b/app/assets/javascripts/templates/action.hbs
@@ -3,7 +3,6 @@
   description: {{ description }} <br>
   action.description: {{ action.description }} <br>
   start time: {{ dateFormat start_time format="MMM D h:mm a"}} ({{ dateFromNow start_time}}) <br> 
-  start time pretty: {{ start_time_pretty }} <br>
-  end time: {{ action.end_time }} <br>
+  start time: {{ dateFormat end_time format="MMM D h:mm a"}} ({{ dateFromNow end_time}}) <br> 
   <br> helllo 
 </div>
