--- a/app/assets/javascripts/templates/action.hbs
+++ b/app/assets/javascripts/templates/action.hbs
@@ -1,12 +1,14 @@
 <div class="action well">
   <a {{action showAction action href=true}}> # </a>  {{ dateFormat start_time format="MMM D h:mm a"}} ({{ dateFromNow start_time}}) <br>
   <span class="caption">id: </span> {{ id }} <br>
-  <span class="caption">content:</span> {{ content }} <br>
-  <span class="caption">this:</span> {{ this }} <br>
-  <span class="caption">description:</span> {{ description }} <br>
-  <span class="caption">action.description:</span> {{ action.description }} <br>
+  <span class="caption">content:</span> {{view Sysys.EditableField valueBinding="content"}} {{content}} <br>
+  <span class="caption">this:</span> {{view Sysys.EditableField valueBinding="this"}}{{this}}  <br>
+  <span class="caption">description:</span> {{view Sysys.EditableField valueBinding="description" }} {{description}} <br>
+  <span class="caption">start time: </span>{{ view Sysys.EditableField valueBinding="start_time" }} 
   <span class="caption">start time: </span>{{ dateFormat start_time format="MMM D h:mm a"}} ({{ dateFromNow start_time}}) <br> 
   <span class="caption">start time: </span>{{ dateFormat end_time format="MMM D h:mm a"}} ({{ dateFromNow end_time}}) <br> 
+  {{! view Ember.TextField valueBinding="description"}}
+  {{! view Ember.TextField valueBinding="start_time"}}
   <br> helllo 
 
 </div>
