some debugging statments; rename action_serializer->act_serializer; rename action->act in acts.hbs; set up acts_controller.rb to update db and return errors

--- a/app/assets/javascripts/templates/acts.hbs
+++ b/app/assets/javascripts/templates/acts.hbs
@@ -4,7 +4,7 @@
 
     {{#each act in arrangedContent}}
       {{#with act }}
-        {{view  Sysys.ActView contentBinding="action"}}
+        {{view  Sysys.ActView contentBinding="act"}}
       {{/with}}
     {{/each}}
 </div>
