move notifications view into acts.hbs as an outlet; can successfully modify notificationsController.content to push notifications

--- a/app/assets/javascripts/templates/acts.hbs
+++ b/app/assets/javascripts/templates/acts.hbs
@@ -9,6 +9,7 @@
     {{/each}}
 </div>
 {{outlet act}}
-{{view Sysys.NotificationsView contentBinding="notifications"}}
+{{!view Sysys.NotificationsView contentBinding="notifications"}}
 
 <p>Your content here.</p>
+{{outlet zorger}}
