notification removal works; still need to debug validation and error handling on rails side

--- a/app/assets/javascripts/templates/acts.hbs
+++ b/app/assets/javascripts/templates/acts.hbs
@@ -12,4 +12,4 @@
 {{!view Sysys.NotificationsView contentBinding="notifications"}}
 
 <p>Your content here.</p>
-{{outlet zorger}}
+{{outlet notifications}}
