--- a/app/assets/javascripts/templates/notifications.hbs
+++ b/app/assets/javascripts/templates/notifications.hbs
@@ -3,6 +3,7 @@ NOTIFICATIONS
 {{#each notification in content}}
   {{#with notification }}
     {{#view Sysys.NotificationView contentBinding="notification"}}
+    <a class="close" {{action remove notification target="controller"}}>&#215;</a>
       {{notification.title}}<br>
       {{notification.text}}<br>
     {{/view}}
