fleshing out act_view spec: testing bindings (edit act.hbs and acts.hbs to actualy have refer to the act_view.content's attributes); move 'commit' from actview to acts_controller)

--- a/app/assets/javascripts/templates/acts.hbs
+++ b/app/assets/javascripts/templates/acts.hbs
@@ -4,12 +4,11 @@
 
     {{#each act in arrangedContent}}
       {{#with act }}
-        {{view  Sysys.ActView contentBinding="act"}}
+        {{view  Sysys.ActView contentBinding="act" controllerBinding="controller" }}
       {{/with}}
     {{/each}}
 </div>
 {{outlet act}}
-{{!view Sysys.NotificationsView contentBinding="notifications"}}
 
 <p>Your content here.</p>
 {{outlet notifications}}
