--- a/app/assets/javascripts/templates/act.hbs
+++ b/app/assets/javascripts/templates/act.hbs
@@ -1,13 +1,32 @@
 <div class="act well">
+  content: {{content}} <br>
+  view: {{view}} <br>
+  view.content: {{view.content}} <br>
+  this: {{this}} <br>
+  {{# with view.content}}
   <a {{action showAct act href=true}}> # </a>  {{ dateFormat start_time format="MMM D h:mm a"}} ({{ dateFromNow start_time}}) <br>
   <span class="caption">id: </span> {{ id }} <br>
   <span class="caption">content:</span> {{view Sysys.EditableField valueBinding="content"}} {{content}} <br>
-  <span class="caption">this:</span> {{view Sysys.EditableField valueBinding="start_time"}}{{this}}  <br>
-  <span class="caption">description:</span> {{view Sysys.EditableField valueBinding="description" }} {{description}} <br>
-  <span class="caption">date_test:</span> {{view Sysys.DatePickerField  valueBinding="start_time" }} 
-  <span class="caption">start time: </span>{{ view Sysys.EditableField valueBinding="start_time" }} 
-  <span class="caption">start time: </span>{{ dateFormat start_time format="MMM D h:mm a"}} ({{ dateFromNow start_time}}) <br> 
-  <span class="caption">start time: </span>{{ dateFormat end_time format="MMM D h:mm a"}} ({{ dateFromNow end_time}}) <br> 
+  <span class="this">
+    <span class="caption">this:</span>
+    {{view Sysys.EditableField valueBinding="start_time"}}{{this}}  <br>
+  </span>
+  <span class="description">
+    <span class="caption description">description:</span>
+    {{view Sysys.EditableField valueBinding="description" }} {{description}} <br>
+  </span>
+  <span class="date">
+    <span class="caption">date_test:</span> {{view Sysys.DatePickerField  valueBinding="start_time" }} 
+  </span>
+  <span class="start-time">
+    <span class="caption">start time: </span>{{ view Sysys.EditableField valueBinding="start_time" }} 
+  </span>
+  <span class="start-time">
+    <span class="caption">start time: </span>{{ dateFormat start_time format="MMM D h:mm a"}} ({{ dateFromNow start_time}}) <br> 
+  </span>
+  <span class="start-time">
+    <span class="caption">start time: </span>{{ dateFormat end_time format="MMM D h:mm a"}} ({{ dateFromNow end_time}}) <br> 
+  </span>
   <button type="submit" class="btn btn-primary"> zorger </button>
 
   {{! view Ember.TextField valueBinding="description"}}
@@ -17,5 +36,6 @@
     You have unsaved changes
   </div>
   {{/if}}
+  {{/with}}
 
 </div>
