massive changes: rework views to use context instead of content; rework templates to not use with each; add test coverage for notifications and integration tests

--- a/app/assets/javascripts/templates/acts.hbs
+++ b/app/assets/javascripts/templates/acts.hbs
@@ -3,8 +3,8 @@
 <div class="span12">
 
     {{#each act in arrangedContent}}
+      {{view  Sysys.ActView contextBinding="act" }}
       {{#with act }}
-        {{view  Sysys.ActView contentBinding="act" controllerBinding="controller" }}
       {{/with}}
     {{/each}}
 </div>
