--- a/app/assets/javascripts/templates/notifications.hbs
+++ b/app/assets/javascripts/templates/notifications.hbs
@@ -1,7 +1,5 @@
 NOTIFICATIONS
 {{content}}
 {{#each notification in content}}
-  {{#with notification }}
-    {{view Sysys.NotificationView contentBinding="notification"}}
-  {{/with}}
+    {{view Sysys.NotificationView contentBinding="notification" controllerBinding="view.controller"}}
 {{/each}}
