fix test for Act model validation test (using sinon fake xhr); add various notes

--- a/app/assets/javascripts/templates/notification.hbs
+++ b/app/assets/javascripts/templates/notification.hbs
@@ -1,4 +1,4 @@
-{{#with view.content}}
+{{#with view.context}}
 <a class="close" {{action destroyNotification view.content target="view"}}>&#215;</a>
 {{title}}<br>
 {{text}}<br>
