various fixes for tests (mostly involving context vs content in notifications view) and some client side cleanup

--- a/app/assets/javascripts/templates/notification.hbs
+++ b/app/assets/javascripts/templates/notification.hbs
@@ -1,5 +1,5 @@
 {{#with view.context}}
-<a class="close" {{action destroyNotification view.content target="view"}}>&#215;</a>
+<a class="close" {{action destroyNotification view.context target="view"}}>&#215;</a>
 {{title}}<br>
 {{text}}<br>
 {{/with}}
