SherwinObject Sysys.EnumerableObjectViaObject can successfully be passed to #each helper

--- a/app/assets/javascripts/templates/act.hbs
+++ b/app/assets/javascripts/templates/act.hbs
@@ -4,6 +4,13 @@
   {{view Sysys.DetailsView contextBinding="details"}}
   <br>
   <br>
+
+  view.zorger :{{view.zorger}} <Br>
+  each iterator over object
+  {{#each view.zorger}}
+  ...inside each this {{this}} <br>
+  {{/each}}
+
   {{#view contextBinding="details"}}
   {{as_json view.context}}
   {{#with view.context.[0]}}
