--- a/app/assets/javascripts/templates/test_template.hbs
+++ b/app/assets/javascripts/templates/test_template.hbs
@@ -1,8 +1,27 @@
+uLV = {{view.upperLevelVar}}<br>
 {{#each arg in view.content}}
   {{arg}}
-  {{view Sysys.EditableField valueBinding="arg"}}
+  {{#view valueBinding="arg" ulvBinding="view.upperLevelVar"}}
+    {{view.value}}
+    {{view.ulv}}
+  {{/view}}
   <br>
 {{/each}}
+<h1> repeat</h1>
+{{repeat view.upperLevelVar count=10}}
+<br>
+<br>
+<br>
+<br>
+{{#collection eleBinding="view.content"}}
+ele: {{ele}} <br>
+view.elee {{view.ele}} <br>
+  {{#view valueBinding="ele" ulvBinding="view.upperLevelVar"}}
+  view.value = {{view.value}} <br>
+  view.ulv = {{view.ulv}} <br>
+  {{/view}}
+  <br>
+{{/collection}}
 {{view.content.[0]}}
 {{view.content.[1]}}
 {{view.content.[2]}}
