--- a/app/assets/javascripts/templates/details.hbs
+++ b/app/assets/javascripts/templates/details.hbs
@@ -13,7 +13,7 @@
       {{#each element in view.details}}
         {{#view tagName="span" className="details-iter"}}
           {{#if view.parentView.details.isHash}}
-            {{view Sysys.DetailsKeyView detailsBinding="element" indexBinding="view._parentView.contentIndex"}}
+            {{view Sysys.DetailsKeyView detailsBinding="view.parentView.details" indexBinding="view._parentView.contentIndex"}}
           {{else}}
           [{{view._parentView.contentIndex}}]
           {{/if}}
