Putting together DetailsView commits with Acts and server side saving. Change Act.details to Act.detail (both client and server side), turn on object transform serialization, set up default detail in deserialize transform as an empty object, update details serializer to remove id, update DetailsView#commit to play nice with ActView

--- a/app/assets/javascripts/templates/act.hbs
+++ b/app/assets/javascripts/templates/act.hbs
@@ -1,5 +1,5 @@
 <div class="act well">
-  details = {{ details }} </br>
+  details = {{ detail }} </br>
   miniview:: <br>
   <br>
   <br>
@@ -33,6 +33,11 @@
   <span class="start-time">
     <span class="caption">start time: </span>{{ dateFormat end_time format="MMM D h:mm a"}} ({{ dateFromNow end_time}}) <br> 
   </span>
+
+  {{view Sysys.DetailsView detailsBinding="detail"}}
+  
+
+
   <button type="submit" class="btn btn-primary"> zorger </button>
 
   {{! view Ember.TextField valueBinding="description"}}
