--- a/app/assets/javascripts/templates/details.hbs
+++ b/app/assets/javascripts/templates/details.hbs
@@ -21,7 +21,7 @@
         {{/view}}
       {{/each}}
     {{else}}
-    <em>{{view.details}} {{view Sysys.EditableField valueBinding="view.details"}} ||  {{view.details.val}} || {{view Sysys.EditableField valueBinding="view.details.val"}}</em>
+    <em>{{view.details}}</em>
     {{/if}}
   {{/if}}
 </div>
