fix details view enterEdit bug; tests pass

--- a/app/assets/javascripts/templates/act.hbs
+++ b/app/assets/javascripts/templates/act.hbs
@@ -1,5 +1,5 @@
 <div class="act well">
-  <a {{action showAct act href=true}}> # </a>  {{ dateFormat start_time format="MMM D h:mm a"}} ({{ dateFromNow start_time}}) <br>
+  <span class="title"><a {{action showAct act href=true}}> # </a>  {{ dateFormat start_time format="MMM D h:mm a"}} ({{ dateFromNow start_time}}) </span><br>
   <span class="caption">id: </span> {{ id }} <br>
 
   <span class="description">
