--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,8 @@
+//= require_tree .
 @import "bootstrap";
 @import "jquery.ui.datepicker";
 @import "jquery.ui.slider";
+//
 // @import "vendor/jquery-ui-1.9.2.custom";
 //# pp/assets/javascripts/vendor/jquery-ui-1.9.2.custom/css/ui-lightness
 
