update kvp item class to use an Ember Textfield, styled similarly to content fields; generic clean up

--- a/app/assets/javascripts/templates/list_item.hbs
+++ b/app/assets/javascripts/templates/list_item.hbs
@@ -1,1 +1,1 @@
-::<em>{{view.contentIndex}}</em>: **{{view Sysys.HumonNodeView contentBinding="view.content"}}
+::<em>{{view.contentIndex}}</em>: {{view Sysys.HumonNodeView contentBinding="view.content"}}
