--- a/app/assets/javascripts/templates/kvp_item.hbs
+++ b/app/assets/javascripts/templates/kvp_item.hbs
@@ -1,1 +1,1 @@
-::<em>{{view.content.key}}</em>: **{{view Sysys.HumonNodeView contentBinding="view.content.val"}}
+::<em>{{view Ember.TextField valueBinding="view.content.key" class="key"}}</em>: {{view Sysys.HumonNodeView contentBinding="view.content.val"}}
