allow singleton hashes to be treated as literals for layout purpose ... no tests

--- a/app/assets/stylesheets/humon_node.css.scss
+++ b/app/assets/stylesheets/humon_node.css.scss
@@ -5,8 +5,13 @@
 
 .node-collection {
   border: none; //1px blue solid;
-  display:block;
+  display: block;
   margin-left: 10px;
+}
+.node-collection.node-collection-flat {
+  display: inline-block;
+  // border: 1px solid red;
+  margin-left: 0px;
 }
 
 textarea.content-field {
