some basic styling and cleanup; adding rudimentary support for animations via kvp/list item did/will insert /destroy element

--- a/app/assets/javascripts/templates/kvp_item.hbs
+++ b/app/assets/javascripts/templates/kvp_item.hbs
@@ -1,1 +1,2 @@
-::<em>{{view Ember.TextField valueBinding="view.content.key" class="key"}}</em>: {{view Sysys.HumonNodeView contentBinding="view.content.val"}}
+<em>{{view Ember.TextField valueBinding="view.content.key" class="key"}}</em>:
+{{view Sysys.HumonNodeView contentBinding="view.content.val"}}
