remove <em> styling in kvp and list item hbs; refactor details controller out; temporarily (maybe permanently) disabling flat-collection

--- a/app/assets/javascripts/templates/kvp_item.hbs
+++ b/app/assets/javascripts/templates/kvp_item.hbs
@@ -1,2 +1,2 @@
-<em>{{view Ember.TextField valueBinding="view.content.key" class="key"}}</em>:
+{{view Ember.TextField valueBinding="view.content.key" class="key"}}:
 {{view Sysys.HumonNodeView contentBinding="view.content.val"}}
