--- a/app/assets/javascripts/templates/list_item.hbs
+++ b/app/assets/javascripts/templates/list_item.hbs
@@ -1,1 +1,1 @@
-::<em>{{view.contentIndex}}</em>: {{view Sysys.HumonNodeView contentBinding="view.content"}}
+::{{view.contentIndex}}: {{view Sysys.HumonNodeView contentBinding="view.content"}}
