add 'activeHumonNode' field to detailController, add isActive methods for humonNode, kvp, and list item; add styling to show up; add view focusIn handlers to trigger

--- a/app/assets/stylesheets/humon_node.css.scss
+++ b/app/assets/stylesheets/humon_node.css.scss
@@ -45,3 +45,20 @@ textarea.content-field:focus {
   background: azure;
   box-shadow: none;
 }
+
+// ACTIVS
+.active.node-literal {
+  border-top: 1px solid red;
+  border-bottom: 1px solid red;
+}
+
+.node-collection-flat.active   .node-literal {
+  border-top: 1px solid red;
+  border-bottom: 1px solid red;
+}
+
+.active.kvp-item > input{
+  border-top: 1px solid blue;
+  border-bottom: 1px solid blue;
+}
+
