Start conversion to unified child items! add node_item.hbs and view.js.coffee; add hasKey and nodeKey to hn; add styling for node item; switch default itemViewClass for hn.hbs from listitem to nodeitem

--- a/app/assets/javascripts/templates/humon_node.hbs
+++ b/app/assets/javascripts/templates/humon_node.hbs
@@ -5,7 +5,8 @@
     {{collection contentBinding="view.content.nodeVal" itemViewClass="Sysys.KvpItemView" class="kvpcollectionhelper"}}
   {{/if}}
   {{#if view.content.isList}}
-    {{collection contentBinding="view.content.nodeVal" itemViewClass="Sysys.ListItemView" class="listcollectionhelper"}}
+    {{!collection contentBinding="view.content.nodeVal" itemViewClass="Sysys.ListItemView" class="listcollectionhelper"}}
+    {{collection contentBinding="view.content.nodeVal" itemViewClass="Sysys.NodeItemView" class="node-item-collection-wrapper"}}
   {{/if}}
 {{/if}}
 {{#if view.displayStats}}
