fixed humon node view specs; all specs pass (related to the children unification)

--- a/app/assets/javascripts/templates/kvp_item.hbs
+++ b/app/assets/javascripts/templates/kvp_item.hbs
@@ -1,2 +1,2 @@
-{{view Ember.TextField valueBinding="view.content.key" class="key"}}:
-{{view Sysys.HumonNodeView contentBinding="view.content.val"}}
+{{view Ember.TextField valueBinding="view.content.nodeKey" class="key"}}:
+{{view Sysys.HumonNodeView contentBinding="view.content"}}
